<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark" >

    <com.compa.recognizesheet.views.TouchImageView
        android:id="@+id/grid_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="55dp"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp" >

        <EditText
            android:id="@+id/text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.7"
            android:hint="@string/text_hint_id" />

        <EditText
            android:id="@+id/text_tp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.3"
            android:hint="@string/text_hint_tp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnStartCamera"
            android:layout_width="0px"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#fff"
            android:layout_marginRight="2dp"
            android:text="@string/text_btn_camera"
            android:textColor="#ff6347" />

        <Button
            android:id="@+id/btnIncreaseThreshold"
           android:layout_width="0px"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#fff"
            android:layout_marginRight="2dp"
            android:text="Bright +"
            android:textColor="#ff6347" />

        <Button
            android:id="@+id/btnDecreaseThreshold"
            android:layout_width="0px"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#fff"
            android:layout_marginRight="2dp"
            android:text="Bright -"
            android:textColor="#ff6347" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="0px"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#fff"
            android:layout_marginRight="2dp"
            android:text="@string/text_btn_exit"
            android:textColor="#ff6347"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0px"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/text_btn_submit"
            android:textColor="#ff6347" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressbar_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal" >

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/text_processing_data" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C0C0C0" />
    </LinearLayout>

</RelativeLayout>